--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <!-- cambiar -->
     <meta name="author" content="Diego Velázquez" />
     <meta
       name="description"
@@ -42,6 +43,7 @@
       rel="stylesheet"
     />
 
+    <!-- IconWhastApp -->
     <link rel="stylesheet" href="assets/css/whats.css">
     <link rel="stylesheet" href="assets/css/whats2.css">
 
@@ -54,12 +56,7 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <img
-          src="assets/images/avatar.png"
-          class="icon-title mr-1"
-          alt="logo"
-        />
-        <h3><a href="#" class="nav-link text-logo">Maestro Heracles</a></h3>
+        <h3><a href="#" class="nav-link text-logo">Templo Sagrado</a></h3>
         <button
           class="navbar-toggler"
           type="button"
@@ -103,7 +100,6 @@
       <video autoplay muted loop id="myVideo">
         <source src="assets/images/vid.mp4" type="video/mp4" />
       </video>
-      <div id="particles-js"></div>
     </div>
 
     <!-- /////////////////
@@ -177,18 +173,6 @@
             Solo envíame tu caso y cuéntame tu problema, todo es discreto y
             profesional. Toma la decisión ya y podrías cambiar tu vida ahora.
           </p>
-        </div>
-        <div class="video-container d-flex justify-content-center col-12">
-          <iframe
-            class="maestro"
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/CLyD_ZjeilM"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          >
-          </iframe>
         </div>
         <div class="row">
           <div class="col-md-4">
@@ -308,7 +292,7 @@
     <section id="testimonial" class="bgLightGrey">
       <div class="container">
         <div class="content-center">
-          <h2><b>Testimonios</b></h2>
+          <h2><b>Mantenimmiento</b></h2>
           <p>
             Presente para muchos los testimonios de las personas que tuvieron el
             lujo de vivirlas
@@ -371,7 +355,7 @@
     <section id="contact">
       <div class="container">
         <div class="content-center">
-          <h2>Contactos</h2>
+          <h2>Mantenimiento</h2>
         </div>
         <div class="row">
           <div class="col-md-6 mt-4">
@@ -493,11 +477,11 @@
         <small
           >©2020 All Rights Reserved.
           <a
-            href="http://www.maestroheracles.com"
+            href="http://www.realtemplosagrado.com"
             class="font-weight-bold"
             target="_blank"
             rel="noopener"
-            >www.maestroheracles.com</a
+            >www.realtemplosagrado.com</a
           ></small
         >
       </div>
@@ -512,9 +496,6 @@
       src="https://kit.fontawesome.com/978fd2d0a8.js"
       crossorigin="anonymous"
     ></script>
-    <!-- particles -->
-    <script src="assets/js/particles.min.js"></script>
-    <script src="assets/js/particulas.js"></script>
     <!-- WhatsAppIcon -->
     <script src="assets/js/script2.js"></script>
   </body>
