Cambios en index

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     />
 
     <!-- IconWhastApp -->
-    <link rel="stylesheet" href="assets/css/whats.css">
-    <link rel="stylesheet" href="assets/css/whats2.css">
+    <link rel="stylesheet" href="assets/css/whats.css" />
+    <link rel="stylesheet" href="assets/css/whats2.css" />
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/avatar.png" />
 
-    <title>Maestro Heracles</title>
+    <title>Templo Sagrado</title>
   </head>
 
   <body>
@@ -106,7 +106,7 @@
       Button WhatsApp
     ////////////////////// -->
 
-    <div class="nav-bottom">    
+    <div class="nav-bottom">
       <div class="popup-whatsapp fadeIn">
         <div class="content-whatsapp -top">
           <button type="button" class="closePopup">
@@ -114,8 +114,8 @@
           </button>
 
           <p>
-            <img src="assets/images/secretary.png" width="50" /> Hola, ¿en que podemos
-            ayudarle?
+            <img src="assets/images/secretary.png" width="50" /> Hola, ¿en que
+            podemos ayudarle?
           </p>
         </div>
         <div class="content-whatsapp -bottom">
@@ -146,13 +146,12 @@
     <section id="hero" class="bgLightGrey">
       <div class="container">
         <div class="content-center">
-          <h1 class="mt-5">Amarres, conjuros y rituales para el amor</h1>
+          <h1 class="mt-5">Real Templo Sagrado</h1>
           <p>
-            Regresa y domina a tu ser amado en 2 días. No te dejes engañar mas.
-            Devolución de dinero si no ves resultados reales. TRABAJOS
-            REALIZADOS COMPLETAMENTE EN VIVO. Somos profesionales del amor con
-            más de 30 años de experiencia en México. Aprovecha esta gran
-            oportunidad y para de sufrir. estoy para ayudarte.
+            Especialistas en realizar AMARRES, CONJUROS, RITUALES Y TRABAJOS DE
+            ELIMINACION, con el poder de la SANTA MUERTE y de los angeles
+            negros. Cientos de personas satisfechas y dispuestas a dar
+            testimonio de ello así lo demuestran.
           </p>
           <a
             href="https://api.whatsapp.com/send?phone=526323188867"
@@ -312,7 +311,7 @@
                 <div class="d-flex flex-column">
                   <p class="h3">Sandra Maria Rodriguez</p>
                   <audio controls controlslist="nodownload">
-                    <source src="assets/images/testimonios/testimonio1.ogg">
+                    <source src="assets/images/testimonios/testimonio1.ogg" />
                   </audio>
                 </div>
               </div>
@@ -327,7 +326,7 @@
                 <div class="d-flex flex-column">
                   <p class="h3">Juan Vicente Hernandez</p>
                   <audio controls controlslist="nodownload">
-                    <source src="assets/images/testimonios/testimonio2.ogg">
+                    <source src="assets/images/testimonios/testimonio2.ogg" />
                   </audio>
                 </div>
               </div>
@@ -342,7 +341,7 @@
                 <div class="d-flex flex-column">
                   <p class="h3">Viviana Arango Rojas</p>
                   <audio controls controlslist="nodownload">
-                    <source src="assets/images/testimonios/testimonio3.ogg">
+                    <source src="assets/images/testimonios/testimonio3.ogg" />
                   </audio>
                 </div>
               </div>
