Estilos de la página

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-    <!-- Style -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
-
     <!-- Google fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600"
@@ -50,6 +47,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/avatar.png" />
 
+    <!-- Style -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+
     <title>Templo Sagrado</title>
   </head>
 
@@ -66,7 +66,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <img src="assets/images/menu.svg" />
+          <i class="fas fa-bars toggler-color"></i>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -166,7 +166,7 @@
     <section id="portfolio">
       <div class="container-fluid">
         <div class="content-center">
-          <h2>Nuestros <b>Servicios</b></h2>
+          <h2>Servicios</h2>
           <p>
             Conoce mis amarres, podrían tener la solución que tanto buscas...
             Solo envíame tu caso y cuéntame tu problema, todo es discreto y
@@ -427,14 +427,13 @@
         </div>
         <div class="row mb-3">
           <p>
-            www.maestroheracles.com, no recolectamos información financiera, ni
-            números de identificación. Los datos solicitados, será solo su
-            nombre, e-mail, teléfono en caso de que usted desee reservarlo puede
-            sustituirlo por un seudónimo no vendemos ni compartimos ningún tipo
-            de información, siendo los datos requeridos son utilizados para
-            realizar una mejor atención, para que el cliente se sienta
-            satisfecho con nuestros servicios la información enviada vía email
-            se hará bajo…
+            No recolectamos información financiera, ni números de
+            identificación. Los datos solicitados, será solo su nombre, e-mail,
+            teléfono en caso de que usted desee reservarlo puede sustituirlo por
+            un seudónimo no vendemos ni compartimos ningún tipo de información,
+            siendo los datos requeridos son utilizados para realizar una mejor
+            atención, para que el cliente se sienta satisfecho con nuestros
+            servicios la información enviada vía email se hará bajo…
           </p>
         </div>
         <div class="row">
