--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
+    <!-- Style -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+
     <!-- Google fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Piedra&display=swap"
       rel="stylesheet"
     />
 
@@ -47,16 +55,15 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/avatar.png" />
 
-    <!-- Style -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
-
     <title>Templo Sagrado</title>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <h3><a href="#" class="nav-link text-logo">Templo Sagrado</a></h3>
+        <h3>
+          <a href="#" class="nav-link text-logo">Templo Sagrado</a>
+        </h3>
         <button
           class="navbar-toggler"
           type="button"
@@ -146,7 +153,7 @@
     <section id="hero" class="bgLightGrey">
       <div class="container">
         <div class="content-center">
-          <h1 class="mt-5">Real Templo Sagrado</h1>
+          <h1 class="mt-5 retroshadow">Real Templo Sagrado</h1>
           <p>
             Especialistas en realizar AMARRES, CONJUROS, RITUALES Y TRABAJOS DE
             ELIMINACION, con el poder de la SANTA MUERTE y de los angeles
