regresando a video original

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Piedra&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&display=swap"
       rel="stylesheet"
     />
 
@@ -107,6 +107,7 @@
       <video autoplay muted loop id="myVideo">
         <source src="assets/images/vid.mp4" type="video/mp4" />
       </video>
+      <!-- <div class="imgCementerio"></div> -->
     </div>
 
     <!-- /////////////////
@@ -153,7 +154,7 @@
     <section id="hero" class="bgLightGrey">
       <div class="container">
         <div class="content-center">
-          <h1 class="mt-5 retroshadow">Real Templo Sagrado</h1>
+          <h1 class="mt-5 retroshadow">Real <br />Templo Sagrado</h1>
           <p>
             Especialistas en realizar AMARRES, CONJUROS, RITUALES Y TRABAJOS DE
             ELIMINACION, con el poder de la SANTA MUERTE y de los angeles
