cambios en video

--- a/index.html
+++ b/index.html
@@ -156,10 +156,9 @@
         <div class="content-center">
           <h1 class="mt-5 retroshadow">Real <br />Templo Sagrado</h1>
           <p>
-            Especialistas en realizar AMARRES, CONJUROS, RITUALES Y TRABAJOS DE
-            ELIMINACION, con el poder de la SANTA MUERTE y de los angeles
-            negros. Cientos de personas satisfechas y dispuestas a dar
-            testimonio de ello así lo demuestran.
+            AMARRES, CONJUROS, RITUALES Y TRABAJOS DE ELIMINACION, con el poder
+            de la SANTA MUERTE y de los ángeles negros. Cientos de personas
+            satisfechas y dispuestas a dar testimonio de ello así lo demuestran.
           </p>
           <a
             href="https://api.whatsapp.com/send?phone=526323188867"
