--- a/index.html
+++ b/index.html
@@ -154,11 +154,12 @@
     <section id="hero" class="bgLightGrey">
       <div class="container">
         <div class="content-center">
-          <h1 class="mt-5 retroshadow">Real <br />Templo Sagrado</h1>
+          <h1 class="mt-5 retroshadow">Templo Sagrado</h1>
           <p>
-            AMARRES, CONJUROS, RITUALES Y TRABAJOS DE ELIMINACION, con el poder
-            de la SANTA MUERTE y de los ángeles negros. Cientos de personas
-            satisfechas y dispuestas a dar testimonio de ello así lo demuestran.
+            AMARRES, CONJUROS, RITUALES Y TRABAJOS DE ELIMINACION. Regreso al
+            ser amado, trabajos de entierros, lecturas de Tarot. Cientos de
+            personas satisfechas y dispuestas a dar testimonio de ello así lo
+            demuestran.
           </p>
           <a
             href="https://api.whatsapp.com/send?phone=529991550898"
@@ -176,8 +177,9 @@
           <h2>Servicios</h2>
           <p>
             Conoce mis amarres, podrían tener la solución que tanto buscas...
-            Solo envíame tu caso y cuéntame tu problema, todo es discreto y
-            profesional. Toma la decisión ya y podrías cambiar tu vida ahora.
+            Solo envíame tu caso y cuéntame tu problema, todo con la mayor
+            discreción y profesionalismo. Toma la decisión ya y podrías cambiar
+            tu vida ahora.
           </p>
         </div>
         <div class="row">
@@ -192,7 +194,7 @@
                 </a> -->
               </div>
               <img
-                src="assets/images/3.jpg"
+                src="assets/images/portfolio-06 (2).jpg"
                 class="img-fluid images-pequeñas"
                 alt="Portfolio 01"
               />
