Imagenes innecesarias eliminadas

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       </div>
     </section>
 
-    <section id="contact">
+    <!-- <section id="contact">
       <div class="container">
         <div class="content-center">
           <h2>Mantenimiento</h2>
@@ -428,7 +428,7 @@
         </div>
       </div>
     </section>
-
+ -->
     <section id="politics" class="bgLightGrey">
       <div class="container">
         <div class="content-center">
