cambio de estilos

--- a/index.html
+++ b/index.html
@@ -103,12 +103,11 @@
       VIDEO
     ////////////////////// -->
 
-    <div class="container-fluid video-fondo">
-      <video autoplay muted loop id="myVideo">
+    <!--  <div class="container-fluid video-fondo">
+       <video autoplay muted loop id="myVideo">
         <source src="assets/images/vid.mp4" type="video/mp4" />
-      </video>
-      <!-- <div class="imgCementerio"></div> -->
-    </div>
+      </video> 
+    </div> -->
 
     <!-- /////////////////
       Button WhatsApp
@@ -154,12 +153,11 @@
     <section id="hero" class="bgLightGrey">
       <div class="container">
         <div class="content-center">
-          <h1 class="mt-5 retroshadow">Templo Sagrado</h1>
+          <h1 class="mt-5">Templo Sagrado</h1>
           <p>
             AMARRES, CONJUROS, RITUALES Y TRABAJOS DE ELIMINACION. Regreso al
-            ser amado, trabajos de entierros, lecturas de Tarot. Cientos de
-            personas satisfechas y dispuestas a dar testimonio de ello así lo
-            demuestran.
+            ser amado, trabajos de entierros, lecturas de Tarot. Muchas personas
+            satisfechas y dispuestas a dar testimonio de ello así lo demuestran.
           </p>
           <a
             href="https://api.whatsapp.com/send?phone=529991550898"
@@ -171,7 +169,7 @@
       </div>
     </section>
 
-    <section id="portfolio">
+    <section id="portfolio" class="bgLight">
       <div class="container-fluid">
         <div class="content-center">
           <h2>Servicios</h2>
@@ -297,13 +295,13 @@
       </div>
     </section>
 
-    <section id="testimonial" class="bgLightGrey">
+    <section id="testimonial" class="bgLight">
       <div class="container">
         <div class="content-center">
           <h2><b>Testimonios</b></h2>
           <p>
-            Presente para muchos los testimonios de las personas que tuvieron el
-            lujo de vivirlas
+            Escucha algunos de los testimonios de personas que han buscado
+            nuestra ayuda
           </p>
         </div>
         <!-- tarjetas de los testimonios -->
@@ -360,10 +358,10 @@
       </div>
     </section>
 
-    <!-- <section id="contact">
+    <section id="contact" class="bgLight">
       <div class="container">
         <div class="content-center">
-          <h2>Mantenimiento</h2>
+          <h2>Contactos</h2>
         </div>
         <div class="row">
           <div class="col-md-6 mt-4">
@@ -415,7 +413,7 @@
                     type="text"
                     class="form-control"
                     id="company"
-                    placeholder="Company name"
+                    placeholder="Mensaje"
                   />
                 </div>
               </div>
@@ -428,8 +426,8 @@
         </div>
       </div>
     </section>
- -->
-    <section id="politics" class="bgLightGrey">
+
+    <section id="politics" class="bgLight">
       <div class="container">
         <div class="content-center">
           <h2>Políticas de <b>privacidad</b></h2>
