cambios background-color en Seccion

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
       </div>
     </section>
 
-    <section id="testimonial" class="bgLight">
+    <section id="testimonial" class="bgDarkTemplate">
       <div class="container">
         <div class="content-center">
           <h2><b>Testimonios</b></h2>
@@ -427,7 +427,7 @@
       </div>
     </section>
 
-    <section id="politics" class="bgLight">
+    <section id="politics" class="bgDarkTemplate">
       <div class="container">
         <div class="content-center">
           <h2>Políticas de <b>privacidad</b></h2>
