Paralax Gradiant-background

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
+    <!-- Gradiant Styles -->
+    <link rel="stylesheet" href="assets/css/gradiantStyle.css">
+
     <!-- Style -->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
@@ -108,6 +111,9 @@
         <source src="assets/images/vid.mp4" type="video/mp4" />
       </video> 
     </div> -->
+
+    <!-- Gradiant Fijo -->
+    <div class="gradiant-fijo angle-bg"></div>
 
     <!-- /////////////////
       Button WhatsApp
@@ -295,7 +301,7 @@
       </div>
     </section>
 
-    <section id="testimonial" class="bgDarkTemplate">
+    <section id="testimonial">
       <div class="container">
         <div class="content-center">
           <h2><b>Testimonios</b></h2>
@@ -427,7 +433,7 @@
       </div>
     </section>
 
-    <section id="politics" class="bgDarkTemplate">
+    <section id="politics">
       <div class="container">
         <div class="content-center">
           <h2>Políticas de <b>privacidad</b></h2>
