--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
       VIDEO
     ////////////////////// -->
 
-    <!--  <div class="container-fluid video-fondo">
+    <div class="container-fluid video-fondo">
        <video autoplay muted loop id="myVideo">
         <source src="assets/images/vid.mp4" type="video/mp4" />
       </video> 
-    </div> -->
+    </div>
 
     <!-- Gradiant Fijo -->
     <div class="gradiant-fijo angle-bg"></div>
@@ -156,7 +156,7 @@
       HERO
     ////////////////////// -->
 
-    <section id="hero" class="bgLightGrey">
+    <section id="hero">
       <div class="container">
         <div class="content-center">
           <h1 class="mt-5">Templo Sagrado</h1>
