Linkeando contenido al WhastsApp
corrigiendo errores de z-index y agregando los direccionamientos para el WhastsApp

--- a/index.html
+++ b/index.html
@@ -189,104 +189,86 @@
         <div class="row">
           <div class="col-md-4">
             <div class="portfolio-container">
-              <div class="portfolio-details">
-                <a href="#">
+              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                <div class="portfolio-details">
                   <h3>Amarres para toda la vida</h3>
-                </a>
-                <!-- <a href="#">
-                  <p>— Ver mas...</p>
-                </a> -->
-              </div>
-              <img
-                src="assets/images/portfolio-06 (2).jpg"
-                class="img-fluid images-pequeñas"
-                alt="Portfolio 01"
-              />
+                </div>
+                <img
+                  src="assets/images/portfolio-06 (2).jpg"
+                  class="img-fluid images-pequeñas"
+                  alt="Portfolio 01"
+                />
+              </a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <div class="portfolio-details">
-                <a href="#">
+              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                <div class="portfolio-details">
                   <h3>Retiro de maldad</h3>
-                </a>
-                <!-- <a href="#">
-                  <p>— Ver mas...</p>
-                </a> -->
-              </div>
-              <img
-                src="assets/images/portfolio-06.jpg"
-                class="img-fluid"
-                alt="Portfolio 02"
-              />
+                </div>
+                <img
+                  src="assets/images/portfolio-06.jpg"
+                  class="img-fluid"
+                  alt="Portfolio 02"
+                />
+              </a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <div class="portfolio-details">
-                <a href="#">
+              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                <div class="portfolio-details">
                   <h3>Hechizos de amor</h3>
-                </a>
-                <!-- <a href="#">
-                  <p>— Ver mas...</p>
-                </a> -->
-              </div>
-              <img
-                src="assets/images/portfolio-02.jpg"
-                class="img-fluid"
-                alt="Portfolio 03"
-              />
+                </div>
+                <img
+                  src="assets/images/portfolio-02.jpg"
+                  class="img-fluid"
+                  alt="Portfolio 03"
+                />
+              </a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <div class="portfolio-details">
-                <a href="#">
+              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                <div class="portfolio-details">
                   <h3>Recupera tu pareja</h3>
-                </a>
-                <!-- <a href="#">
-                  <p>— Ver mas...</p>
-                </a> -->
-              </div>
-              <img
-                src="assets/images/4.jpg"
-                class="img-fluid"
-                alt="Portfolio 04"
-              />
+                </div>
+                <img
+                  src="assets/images/4.jpg"
+                  class="img-fluid"
+                  alt="Portfolio 04"
+                />
+              </a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <div class="portfolio-details">
-                <a href="#">
+              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                <div class="portfolio-details">
                   <h3>Amarres con foto</h3>
-                </a>
-                <!-- <a href="#">
-                  <p>— Ver mas...</p>
-                </a> -->
-              </div>
-              <img
-                src="assets/images/portfolio-05.jpg"
-                class="img-fluid"
-                alt="Portfolio 05"
-              />
+                </div>
+                <img
+                  src="assets/images/portfolio-05.jpg"
+                  class="img-fluid"
+                  alt="Portfolio 05"
+                />
+              </a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <div class="portfolio-details">
-                <a href="#">
+              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                <div class="portfolio-details">
                   <h3>Amarres para matrimonio</h3>
-                </a>
-                <!-- <a href="#">
-                  <p>— Ver mas...</p>
-                </a> -->
-              </div>
-              <img
-                src="assets/images/portfolio-01.jpg"
-                class="img-fluid"
-                alt="Portfolio 06"
-              />
+                </div>
+                <img
+                  src="assets/images/portfolio-01.jpg"
+                  class="img-fluid"
+                  alt="Portfolio 06"
+                />
+              </a>
             </div>
           </div>
         </div>
@@ -316,11 +298,13 @@
           <div class="row ml-0 mr-0">
             <div class="col-md-12 col-lg-4 mb-4">
               <div class="grid-item">
-                <img
-                  src="assets/images/testimonios/testimonio1.jpg"
-                  class="rounded"
-                  alt=""
-                />
+                <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                  <img
+                    src="assets/images/testimonios/testimonio1.jpg"
+                    class="rounded"
+                    alt=""
+                  />
+                </a>
                 <div class="d-flex flex-column">
                   <p class="h3">Sandra Maria Rodriguez</p>
                   <audio controls controlslist="nodownload">
@@ -331,11 +315,13 @@
             </div>
             <div class="col-md-12 col-lg-4 mb-4">
               <div class="grid-item">
-                <img
-                  src="assets/images/testimonios/testimonio2.jpg"
-                  class="rounded"
-                  alt=""
-                />
+                <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                  <img
+                    src="assets/images/testimonios/testimonio2.jpg"
+                    class="rounded"
+                    alt=""
+                  />
+                </a>
                 <div class="d-flex flex-column">
                   <p class="h3">Juan Vicente Hernandez</p>
                   <audio controls controlslist="nodownload">
@@ -346,11 +332,13 @@
             </div>
             <div class="col-md-12 col-lg-4 mb-4">
               <div class="grid-item">
-                <img
-                  src="assets/images/testimonios/testimonio3.jpg"
-                  class="rounded"
-                  alt=""
-                />
+                <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                  <img
+                    src="assets/images/testimonios/testimonio3.jpg"
+                    class="rounded"
+                    alt=""
+                  />
+                </a>
                 <div class="d-flex flex-column">
                   <p class="h3">Viviana Arango Rojas</p>
                   <audio controls controlslist="nodownload">
