Cambios en contenido

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
     <!-- Gradiant Styles -->
-    <link rel="stylesheet" href="assets/css/gradiantStyle.css">
+    <link rel="stylesheet" href="assets/css/gradiantStyle.css" />
 
     <!-- Style -->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -107,9 +107,9 @@
     ////////////////////// -->
 
     <div class="container-fluid video-fondo">
-       <video autoplay muted loop id="myVideo">
+      <video autoplay muted loop id="myVideo">
         <source src="assets/images/vid.mp4" type="video/mp4" />
-      </video> 
+      </video>
     </div>
 
     <!-- Gradiant Fijo -->
@@ -161,9 +161,9 @@
         <div class="content-center">
           <h1 class="mt-5">Templo Sagrado</h1>
           <p>
-            AMARRES, CONJUROS, RITUALES Y TRABAJOS DE ELIMINACION. Regreso al
-            ser amado, trabajos de entierros, lecturas de Tarot. Muchas personas
-            satisfechas y dispuestas a dar testimonio de ello así lo demuestran.
+            AMARRES, CONJUROS, PODEROSOS RITUALES Y TRABAJOS DE ELIMINACION.
+            Regreso al ser amado, trabajos de entierros, lecturas de Tarot.
+            Trabajos en vivo!
           </p>
           <a
             href="https://api.whatsapp.com/send?phone=529991550898"
@@ -180,16 +180,19 @@
         <div class="content-center">
           <h2>Servicios</h2>
           <p>
-            Conoce mis amarres, podrían tener la solución que tanto buscas...
-            Solo envíame tu caso y cuéntame tu problema, todo con la mayor
-            discreción y profesionalismo. Toma la decisión ya y podrías cambiar
-            tu vida ahora.
+            Conoce mis amarres y poderosos rituales que podrían tener la
+            solución que tanto buscas... Solo envíame tu caso y cuéntame tu
+            problema, todo con la mayor discreción y profesionalismo. Toma la
+            decisión ya y podrías cambiar tu vida ahora.
           </p>
         </div>
         <div class="row">
           <div class="col-md-4">
             <div class="portfolio-container">
-              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+              <a
+                href="https://api.whatsapp.com/send?phone=529991550898"
+                target="_bank"
+              >
                 <div class="portfolio-details">
                   <h3>Amarres para toda la vida</h3>
                 </div>
@@ -203,7 +206,10 @@
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+              <a
+                href="https://api.whatsapp.com/send?phone=529991550898"
+                target="_bank"
+              >
                 <div class="portfolio-details">
                   <h3>Retiro de maldad</h3>
                 </div>
@@ -217,7 +223,10 @@
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+              <a
+                href="https://api.whatsapp.com/send?phone=529991550898"
+                target="_bank"
+              >
                 <div class="portfolio-details">
                   <h3>Hechizos de amor</h3>
                 </div>
@@ -231,7 +240,10 @@
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+              <a
+                href="https://api.whatsapp.com/send?phone=529991550898"
+                target="_bank"
+              >
                 <div class="portfolio-details">
                   <h3>Recupera tu pareja</h3>
                 </div>
@@ -245,7 +257,10 @@
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+              <a
+                href="https://api.whatsapp.com/send?phone=529991550898"
+                target="_bank"
+              >
                 <div class="portfolio-details">
                   <h3>Amarres con foto</h3>
                 </div>
@@ -259,7 +274,10 @@
           </div>
           <div class="col-md-4">
             <div class="portfolio-container">
-              <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+              <a
+                href="https://api.whatsapp.com/send?phone=529991550898"
+                target="_bank"
+              >
                 <div class="portfolio-details">
                   <h3>Amarres para matrimonio</h3>
                 </div>
@@ -298,7 +316,10 @@
           <div class="row ml-0 mr-0">
             <div class="col-md-12 col-lg-4 mb-4">
               <div class="grid-item">
-                <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                <a
+                  href="https://api.whatsapp.com/send?phone=529991550898"
+                  target="_bank"
+                >
                   <img
                     src="assets/images/testimonios/testimonio1.jpg"
                     class="rounded"
@@ -315,7 +336,10 @@
             </div>
             <div class="col-md-12 col-lg-4 mb-4">
               <div class="grid-item">
-                <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                <a
+                  href="https://api.whatsapp.com/send?phone=529991550898"
+                  target="_bank"
+                >
                   <img
                     src="assets/images/testimonios/testimonio2.jpg"
                     class="rounded"
@@ -332,7 +356,10 @@
             </div>
             <div class="col-md-12 col-lg-4 mb-4">
               <div class="grid-item">
-                <a href="https://api.whatsapp.com/send?phone=529991550898" target="_bank">
+                <a
+                  href="https://api.whatsapp.com/send?phone=529991550898"
+                  target="_bank"
+                >
                   <img
                     src="assets/images/testimonios/testimonio3.jpg"
                     class="rounded"
