CEO de la página

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Diego Velázquez" />
     <meta
       name="description"
-      content="Smart Agency is a one page responsive Bootstrap 4 template. This is a free open source theme, you can use our theme for any purpose, even commercially. Create amazing websites with this easy to customize template."
+      content="Real Templo Sagrado. Amarres de amor, amarres con foto, conjuros, poderosos rituales, lecturas del Tarot.  Ofrezco el poder de mis servicios para México y Ecuador"
     />
 
     <!-- Bootstrap CSS -->
