Cambios en los créditos del footer

--- a/index.html
+++ b/index.html
@@ -501,15 +501,16 @@
         </ul>
 
         <small
-          >©2020 All Rights Reserved.
+          >©2020 All Rights Reserved. www.realtemplosagrado.com - Designed by
           <a
-            href="http://www.realtemplosagrado.com"
+            href="http://www.sisifodev.com"
             class="font-weight-bold"
             target="_blank"
             rel="noopener"
-            >www.realtemplosagrado.com</a
+            >Sisifodev.com</a
           ></small
         >
+        👍
       </div>
     </footer>
 
