--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
+    <!-- slide -->
+    <link rel="stylesheet" href="assets/css/slide.css">
+
     <!-- Gradiant Styles -->
     <link rel="stylesheet" href="assets/css/gradiantStyle.css" />
 
@@ -102,18 +105,111 @@
       </div>
     </nav>
 
-    <!-- /////////////////
-      VIDEO
-    ////////////////////// -->
-
-    <div class="container-fluid video-fondo">
-      <video autoplay muted loop id="myVideo">
-        <source src="assets/images/vid.mp4" type="video/mp4" />
-      </video>
-    </div>
-
     <!-- Gradiant Fijo -->
     <div class="gradiant-fijo angle-bg"></div>
+
+    <!-- /////////////////
+      slide
+    ////////////////////// -->
+
+    <div class="content-slide">
+      <div class="slider">
+        <!-- Ctrl + <- -->
+        <div class="box1 box">
+            <div class="bg"></div>
+            <div class="details">
+              <h3 class="slide-title">I'm the first Box</h3>
+              <p class="p-slide">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing
+                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+                  diam, ac mattis orci pellentesque eget.
+              </p>
+              <button class="button-slide">Check Now</button>
+            </div>
+
+            <div class="illustration">
+                <div class="inner"></div>
+            </div>
+        </div>
+
+
+        <div class="box2 box">
+            <div class="bg"></div>
+            <div class="details">
+              <h3 class="slide-title">I'm the first Box</h3>
+              <p class="p-slide">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing
+                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+                  diam, ac mattis orci pellentesque eget.
+              </p>
+              <button class="button-slide">Check Now</button>
+            </div>
+
+            <div class="illustration">
+                <div class="inner"></div>
+            </div>
+        </div>
+
+        <div class="box3 box">
+            <div class="bg"></div>
+            <div class="details">
+              <h3 class="slide-title">I'm the first Box</h3>
+              <p class="p-slide">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing
+                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+                  diam, ac mattis orci pellentesque eget.
+              </p>
+              <button class="button-slide">Check Now</button>
+            </div>
+
+            <div class="illustration">
+                <div class="inner"></div>
+            </div>
+        </div>
+
+        <div class="box4 box">
+            <div class="bg"></div>
+            <div class="details">
+              <h3 class="slide-title">I'm the first Box</h3>
+              <p class="p-slide">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing
+                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+                  diam, ac mattis orci pellentesque eget.
+              </p>
+              <button class="button-slide">Check Now</button>
+            </div>
+
+            <div class="illustration">
+                <div class="inner"></div>
+            </div>
+        </div>
+
+        <div class="box5 box">
+            <div class="bg"></div>
+            <div class="details">
+              <h3 class="slide-title">I'm the first Box</h3>
+              <p class="p-slide">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing
+                  elit. Integer lacinia dui lectus. Donec scelerisque ipsum
+                  diam, ac mattis orci pellentesque eget.
+              </p>
+              <button class="button-slide">Check Now</button>
+            </div>
+
+            <div class="illustration">
+                <div class="inner"></div>
+            </div>
+        </div>
+
+      </div>
+      <div class="trail">
+        <div class="box1 active"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+        <div class="box5"></div>
+      </div>
+    </div>
 
     <!-- /////////////////
       Button WhatsApp
@@ -522,6 +618,12 @@
       src="https://kit.fontawesome.com/978fd2d0a8.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- slide -->
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CSSRulePlugin3.min.js"></script>
+    <script src="assets/js/slide.js"></script>
+
     <!-- WhatsAppIcon -->
     <script src="assets/js/script2.js"></script>
   </body>
