--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
             </div>
 
             <div class="illustration">
-                <div class="inner"></div>
+                <!-- Inner Reemplazar (add img) -->
+                <div class="inner">
+                  <img class="img-side" src="assets/images/portfolio-01.jpg" alt="">
+                </div>
             </div>
         </div>
         <div class="box2 box">
@@ -143,7 +146,9 @@
             </div>
 
             <div class="illustration">
-                <div class="inner"></div>
+                <div class="inner">
+                  <img class="img-side" src="assets/images/portfolio-02.jpg" alt="">
+                </div>
             </div>
         </div>
         <div class="box3 box">
@@ -159,7 +164,9 @@
             </div>
 
             <div class="illustration">
-                <div class="inner"></div>
+                <div class="inner">
+                  <img class="img-side" src="assets/images/portfolio-06.jpg" alt="">
+                </div>
             </div>
         </div>
         <div class="box4 box">
@@ -175,7 +182,9 @@
             </div>
 
             <div class="illustration">
-                <div class="inner"></div>
+                <div class="inner">
+                  <img class="img-side" src="assets/images/portfolio-07.jpg" alt="">
+                </div>
             </div>
         </div>
         <div class="box5 box">
@@ -191,7 +200,9 @@
             </div>
 
             <div class="illustration">
-                <div class="inner"></div>
+                <div class="inner">
+                  <img class="img-side" src="assets/images/portfolio-05.jpg" alt="">
+                </div>
             </div>
         </div>
       </div>
@@ -245,7 +256,7 @@
       HERO
     ////////////////////// -->
 
-    <section id="hero">
+    <!-- <section id="hero">
       <div class="container">
         <div class="content-center">
           <h1 class="mt-5">Templo Sagrado</h1>
@@ -262,7 +273,7 @@
           >
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section id="portfolio" class="bgLight">
       <div class="container-fluid">
@@ -286,7 +297,7 @@
                   <h3>Amarres para toda la vida</h3>
                 </div>
                 <img
-                  src="assets/images/portfolio-06 (2).jpg"
+                  src="assets/images/portfolio-07.jpg"
                   class="img-fluid images-pequeñas"
                   alt="Portfolio 01"
                 />
